+ Fix the machines + Fix gun reloading + Port NMS to 1.17 style NMS + Fix auction house displaynames
Signed-off-by: Amirmahdi Khamisipour <a.khamisipour@outlook.de>